parser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
import syntaxtree.*;
import visitor.*;
public class MiniJavaParser implements MiniJavaParserConstants {

  static final public Program Goal() throws ParseException {
  MainClass mc;
  ClassDecl cd;
  ClassDeclList cdl = new ClassDeclList();
    mc = MainClass();
    label_1:
    while (true) {
      if (jj_2_1(5)) {
        ;
      } else {
        break label_1;
      }
      cd = ClassDeclaration();
                                             cdl.addElement(cd);
    }
    jj_consume_token(0);
   {if (true) return new Program(mc, cdl);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
        Identifier i1, i2;
        Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LCURL);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAR);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    i2 = Identifier();
    jj_consume_token(RPAR);
    jj_consume_token(LCURL);
    s = Stm();
    jj_consume_token(RCURL);
    jj_consume_token(RCURL);
   {if (true) return new MainClass(i1,i2,s);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclaration() throws ParseException {
        Identifier i1,i2;
        VarDecl vd;
        MethodDecl md;
        VarDeclList vdl = new VarDeclList();
        MethodDeclList mdl = new MethodDeclList();
    if (jj_2_6(5)) {
      jj_consume_token(CLASS);
      i1 = Identifier();
      jj_consume_token(EXTENDS);
      i2 = Identifier();
      jj_consume_token(LCURL);
      label_2:
      while (true) {
        if (jj_2_2(5)) {
          ;
        } else {
          break label_2;
        }
        vd = VarDeclaration();
                                                                                       vdl.addElement(vd);
      }
      label_3:
      while (true) {
        if (jj_2_3(5)) {
          ;
        } else {
          break label_3;
        }
        md = MethodDeclaration();
                                                                                                                                        mdl.addElement(md);
      }
      jj_consume_token(RCURL);
   {if (true) return new ClassDeclExtends(i1,i2,vdl,mdl);}
    } else if (jj_2_7(5)) {
      jj_consume_token(CLASS);
      i1 = Identifier();
      jj_consume_token(LCURL);
      label_4:
      while (true) {
        if (jj_2_4(5)) {
          ;
        } else {
          break label_4;
        }
        vd = VarDeclaration();
                                                             vdl.addElement(vd);
      }
      label_5:
      while (true) {
        if (jj_2_5(5)) {
          ;
        } else {
          break label_5;
        }
        md = MethodDeclaration();
                                                                                                               mdl.addElement(md);
      }
      jj_consume_token(RCURL);
   {if (true) return new ClassDeclSimple(i1,vdl,mdl);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDeclaration() throws ParseException {
        Identifier i;
        Type t;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMICOLON);
   {if (true) return new VarDecl(t,i);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
  Formal f;
  Type t, t1;
  VarDecl vd;
  Statement s;
  Identifier i, i1;
  FormalList fl = new FormalList();
  VarDeclList vdl = new VarDeclList();
  StatementList sl = new StatementList();
  Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAR);
    if (jj_2_13(5)) {
      jj_consume_token(RPAR);
      jj_consume_token(LCURL);
      label_6:
      while (true) {
        if (jj_2_8(5)) {
          ;
        } else {
          break label_6;
        }
        vd = VarDeclaration();
                                          vdl.addElement(vd);
      }
      label_7:
      while (true) {
        if (jj_2_9(5)) {
          ;
        } else {
          break label_7;
        }
        s = Stm();
                                                                             sl.addElement(s);
      }
      jj_consume_token(RETURN);
      e = Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(RCURL);
   {if (true) return new MethodDecl(t, i, fl, vdl, sl, e);}
    } else if (jj_2_14(5)) {
      t1 = Type();
      i1 = Identifier();
                                   f = new Formal(t1, i1);
                                                             fl.addElement(f);
      label_8:
      while (true) {
        if (jj_2_10(5)) {
          ;
        } else {
          break label_8;
        }
        jj_consume_token(COMMA);
        t1 = Type();
        i1 = Identifier();
                                                                                                                        f = new Formal(t1, i1);
                                                                                                                                                  fl.addElement(f);
      }
      jj_consume_token(RPAR);
      jj_consume_token(LCURL);
      label_9:
      while (true) {
        if (jj_2_11(5)) {
          ;
        } else {
          break label_9;
        }
        vd = VarDeclaration();
                                                                                                                                                                                                              vdl.addElement(vd);
      }
      label_10:
      while (true) {
        if (jj_2_12(5)) {
          ;
        } else {
          break label_10;
        }
        s = Stm();
                                                                                                                                                                                                                                                 sl.addElement(s);
      }
      jj_consume_token(RETURN);
      e = Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(RCURL);
   {if (true) return new MethodDecl(t, i, fl, vdl, sl, e);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
        Identifier i;
    if (jj_2_15(5)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
   {if (true) return new IntArrayType();}
    } else if (jj_2_16(5)) {
      jj_consume_token(BOOLEAN);
   {if (true) return new BooleanType();}
    } else if (jj_2_17(5)) {
      jj_consume_token(INT);
   {if (true) return new IntegerType();}
    } else if (jj_2_18(5)) {
      i = Identifier();
   {if (true) return new IdentifierType(i.toString());}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Stm() throws ParseException {
  StatementList sl = new StatementList();
  Statement s1, s2;
  Identifier i ;
  Exp e1, e2;
    if (jj_2_20(5)) {
      jj_consume_token(LCURL);
      label_11:
      while (true) {
        if (jj_2_19(5)) {
          ;
        } else {
          break label_11;
        }
        s1 = Stm();
                       sl.addElement(s1);
      }
      jj_consume_token(RCURL);
     {if (true) return new Block(sl);}
    } else if (jj_2_21(5)) {
      jj_consume_token(IF);
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      s1 = Stm();
      jj_consume_token(ELSE);
      s2 = Stm();
     {if (true) return new If(e1, s1, s2);}
    } else if (jj_2_22(5)) {
      jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      s1 = Stm();
     {if (true) return new While(e1, s1);}
    } else if (jj_2_23(5)) {
      jj_consume_token(SYSOUT);
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      jj_consume_token(SEMICOLON);
     {if (true) return new Print(e1);}
    } else if (jj_2_24(5)) {
      i = Identifier();
      jj_consume_token(ASSIGN);
      e1 = Expression();
      jj_consume_token(SEMICOLON);
     {if (true) return new Assign(i, e1);}
    } else if (jj_2_25(5)) {
      i = Identifier();
      jj_consume_token(LBRACKET);
      e1 = Expression();
      jj_consume_token(RBRACKET);
      jj_consume_token(ASSIGN);
      e2 = Expression();
      jj_consume_token(SEMICOLON);
     {if (true) return new ArrayAssign(i, e1, e2);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expression() throws ParseException {
  Exp e, e1, e2;
  Token t;
  Identifier i;
    if (jj_2_26(5)) {
      t = jj_consume_token(INTEGER_LITERAL);
                         e1 = new IntegerLiteral(Integer.parseInt(t.toString()));
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_27(5)) {
      jj_consume_token(TRUE);
          e1 = new True();
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_28(5)) {
      jj_consume_token(FALSE);
           e1 = new False();
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_29(5)) {
      i = Identifier();
                    e1 = new IdentifierExp(i.toString());
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_30(5)) {
      jj_consume_token(THIS);
          e1 = new This();
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_31(5)) {
      jj_consume_token(NEW);
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      e = Expression();
                                           e1 = new NewArray(e);
      jj_consume_token(RBRACKET);
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_32(5)) {
      jj_consume_token(NEW);
      i = Identifier();
                          e1 = new NewObject(i);
      jj_consume_token(LPAR);
      jj_consume_token(RPAR);
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_33(5)) {
      jj_consume_token(EXCLAMATION);
      e = Expression();
                                  e1 = new Not(e);
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else if (jj_2_34(5)) {
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      e2 = Expressionprime(e1);
   {if (true) return e2;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expressionprime(Exp e) throws ParseException {
  Identifier i;
  Exp ef, ef1, e1, e2;
  ExpList el = new ExpList();
    if (jj_2_44(5)) {
      if (jj_2_35(5)) {
        jj_consume_token(AND);
        e1 = Expression();
                             ef = new And(e, e1);
        ef1 = Expressionprime(ef);
     {if (true) return ef1;}
      } else if (jj_2_36(5)) {
        jj_consume_token(LESS_THAN);
        e1 = Expression();
                                     ef = new LessThan(e, e1);
        ef1 = Expressionprime(ef);
     {if (true) return ef1;}
      } else if (jj_2_37(5)) {
        jj_consume_token(PLUS);
        e1 = Expression();
                                ef = new Plus(e, e1);
        ef1 = Expressionprime(ef);
     {if (true) return ef1;}
      } else if (jj_2_38(5)) {
        jj_consume_token(MINUS);
        e1 = Expression();
                                 ef = new Minus(e, e1);
        ef1 = Expressionprime(ef);
     {if (true) return ef1;}
      } else if (jj_2_39(5)) {
        jj_consume_token(STAR);
        e1 = Expression();
                                ef = new Times(e, e1);
        ef1 = Expressionprime(ef);
     {if (true) return ef1;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_45(5)) {
      jj_consume_token(LBRACKET);
      e1 = Expression();
      jj_consume_token(RBRACKET);
                                             ef = new ArrayLookup(e, e1);
      ef1 = Expressionprime(ef);
     {if (true) return ef1;}
    } else if (jj_2_46(5)) {
      jj_consume_token(DOT);
      jj_consume_token(LENGTH);
                    e1 = new ArrayLength(e);
      ef1 = Expressionprime(e1);
     {if (true) return ef1;}
    } else if (jj_2_47(5)) {
      if (jj_2_42(5)) {
        jj_consume_token(DOT);
        i = Identifier();
        jj_consume_token(LPAR);
        if (jj_2_41(5)) {
          e1 = Expression();
                                                      el.addElement(e1);
          label_12:
          while (true) {
            if (jj_2_40(5)) {
              ;
            } else {
              break label_12;
            }
            jj_consume_token(COMMA);
            e2 = Expression();
                                                                                                      el.addElement(e2);
          }
        } else {
          ;
        }
        jj_consume_token(RPAR);
                                                                                                                                      e1 = new Call(e, i, el);
        ef = Expressionprime(e1);
     {if (true) return ef;}
      } else if (jj_2_43(5)) {
        jj_consume_token(DOT);
        i = Identifier();
        jj_consume_token(LPAR);
        jj_consume_token(RPAR);
                                           e1 = new Call(e, i, el);
        ef1 = Expressionprime(e1);
     {if (true) return ef1;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
     {if (true) return e;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
 Token t;
    t = jj_consume_token(IDENTIFIER);
   {if (true) return new Identifier(t.toString());}
    throw new Error("Missing return statement in function");
  }

  static final public Token Token() throws ParseException {
  Token t;
    if (jj_2_48(5)) {
      t = jj_consume_token(LPAR);
   {if (true) return t;}
    } else if (jj_2_49(5)) {
      t = jj_consume_token(RPAR);
   {if (true) return t;}
    } else if (jj_2_50(5)) {
      t = jj_consume_token(EXCLAMATION);
   {if (true) return t;}
    } else if (jj_2_51(5)) {
      t = jj_consume_token(NEW);
   {if (true) return t;}
    } else if (jj_2_52(5)) {
      t = jj_consume_token(INT);
   {if (true) return t;}
    } else if (jj_2_53(5)) {
      t = jj_consume_token(LBRACKET);
   {if (true) return t;}
    } else if (jj_2_54(5)) {
      t = jj_consume_token(RBRACKET);
   {if (true) return t;}
    } else if (jj_2_55(5)) {
      t = jj_consume_token(THIS);
   {if (true) return t;}
    } else if (jj_2_56(5)) {
      t = jj_consume_token(FALSE);
   {if (true) return t;}
    } else if (jj_2_57(5)) {
      t = jj_consume_token(TRUE);
   {if (true) return t;}
    } else if (jj_2_58(5)) {
      t = jj_consume_token(INTEGER_LITERAL);
   {if (true) return t;}
    } else if (jj_2_59(5)) {
      t = jj_consume_token(DOT);
   {if (true) return t;}
    } else if (jj_2_60(5)) {
      t = jj_consume_token(COMMA);
   {if (true) return t;}
    } else if (jj_2_61(5)) {
      t = jj_consume_token(LENGTH);
   {if (true) return t;}
    } else if (jj_2_62(5)) {
      t = jj_consume_token(AND);
   {if (true) return t;}
    } else if (jj_2_63(5)) {
      t = jj_consume_token(LESS_THAN);
   {if (true) return t;}
    } else if (jj_2_64(5)) {
      t = jj_consume_token(PLUS);
   {if (true) return t;}
    } else if (jj_2_65(5)) {
      t = jj_consume_token(MINUS);
   {if (true) return t;}
    } else if (jj_2_66(5)) {
      t = jj_consume_token(LCURL);
   {if (true) return t;}
    } else if (jj_2_67(5)) {
      t = jj_consume_token(RCURL);
   {if (true) return t;}
    } else if (jj_2_68(5)) {
      t = jj_consume_token(STAR);
   {if (true) return t;}
    } else if (jj_2_69(5)) {
      t = jj_consume_token(RETURN);
   {if (true) return t;}
    } else if (jj_2_70(5)) {
      t = jj_consume_token(SEMICOLON);
   {if (true) return t;}
    } else if (jj_2_71(5)) {
      t = jj_consume_token(IF);
   {if (true) return t;}
    } else if (jj_2_72(5)) {
      t = jj_consume_token(ELSE);
   {if (true) return t;}
    } else if (jj_2_73(5)) {
      t = jj_consume_token(WHILE);
   {if (true) return t;}
    } else if (jj_2_74(5)) {
      t = jj_consume_token(SYSOUT);
   {if (true) return t;}
    } else if (jj_2_75(5)) {
      t = jj_consume_token(ASSIGN);
   {if (true) return t;}
    } else if (jj_2_76(5)) {
      t = jj_consume_token(BOOLEAN);
   {if (true) return t;}
    } else if (jj_2_77(5)) {
      t = jj_consume_token(PUBLIC);
   {if (true) return t;}
    } else if (jj_2_78(5)) {
      t = jj_consume_token(CLASS);
   {if (true) return t;}
    } else if (jj_2_79(5)) {
      t = jj_consume_token(EXTENDS);
   {if (true) return t;}
    } else if (jj_2_80(5)) {
      t = jj_consume_token(STATIC);
   {if (true) return t;}
    } else if (jj_2_81(5)) {
      t = jj_consume_token(VOID);
   {if (true) return t;}
    } else if (jj_2_82(5)) {
      t = jj_consume_token(MAIN);
   {if (true) return t;}
    } else if (jj_2_83(5)) {
      t = jj_consume_token(STRING);
   {if (true) return t;}
    } else if (jj_2_84(5)) {
      t = jj_consume_token(IDENTIFIER);
   {if (true) return t;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }
